# Nikola

./: .gitignore  :w  Cargo.toml  README.md
res/shaders/: compute.wgsl  fluid.wgsl  fluid_shader.wgsl  render_shader.wgsl  screen_shader.wgsl  shader.wgsl
src/: bevy_bridge.rs  binding.rs  computer.rs  config.rs  fluid.rs  fluids.rs  general.rs  lib.rs  main.rs  memory.rs  particles.rs  particles_system.rs  pcisph.rs  pipelines.rs  renderer.rs  simulation.rs  solver.rs  state.rs  wcsph.rs
src/backend/: binding.rs  mod.rs  pipelines.rs  shader.rs  state.rs
src/bevy_bridge/: particles.rs  simulation.rs
src/fluids/: kernel.rs  neighborhoods.rs  non_pressure.rs  particle.rs  pressure.rs  solver.rs  sph.rs
