[package]
name = "nikola"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
fluid-renderer = { path = "./libs/fluid-renderer"}
glam = "0.23.0"
pollster = "0.3.0"
