[package]
name = "nikola"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bytemuck = "1.13.1"
fluid-renderer = { path = "./libs/fluid-renderer"}
glam = "0.23.0"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
nohash-hasher = "0.2.0"
pollster = "0.3.0"
